policygenerator/policy-sets/community/kyverno/best-practises-for-apps/input/require_deployments_have_multiple_replicas/deployment-musthaverolling-strategy.yaml
# WARNING: ClusterPolicy was DEPRECATED in Kyverno v1.17
# To update your policy, browse the official Kyverno policy collection
# for current examples: https://kyverno.io/policies

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deployment-must-have-rolling
  annotations:
    policies.kyverno.io/title: Require Multiple Replicas
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment
    policies.kyverno.io/description: >-
      Deployments with a single replica cannot be highly available and thus the application may suffer downtime if that one replica goes down. This policy validates that Deployments have more than one replica.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: deployment-has-multiple-replicas
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "Deployments should have RollingUpdate strategy"
        pattern:
          spec:
            strategy:
              type: RollingUpdate
              rollingUpdate:
              maxSurge: 1
              maxUnavailable: 0
